Reworked first part of networking lecture

--- a/epam/Presentation/06-network.tex
+++ b/epam/Presentation/06-network.tex
@@ -30,12 +30,14 @@
 
 \mode<all>{\input{../../slides/networking/bridge}}
 
+\mode<all>{\input{../../slides/networking/tuntap}}
+
 \mode<all>{\input{../../slides/networking/useful-progs}}
 
-\mode<all>{\input{../../slides/networking/routing}}
+%\mode<all>{\input{../../slides/networking/routing}}
 
-\mode<all>{\input{../../slides/networking/iptables}}
+%\mode<all>{\input{../../slides/networking/iptables}}
 
-\mode<all>{\input{../../slides/networking/practice}}
+%\mode<all>{\input{../../slides/networking/practice}}
 
 \end{document}
