--- a/epam/Presentation/04-disk.tex
+++ b/epam/Presentation/04-disk.tex
@@ -31,9 +31,10 @@
 
 \mode<all>{\input{../../slides/disk/disk-simple_management.tex}}
 
-\mode<all>{\input{../../slides/disk/raid.tex}}
+\mode<all>{\input{../../slides/disk/disk-gpt.tex}}
 
 \mode<all>{\input{../../slides/disk/lvm.tex}}
 
+\mode<all>{\input{../../slides/disk/raid.tex}}
 
 \end{document}
