Reworked iptables, routing and final network practice.

--- a/epam/Presentation/06-network.tex
+++ b/epam/Presentation/06-network.tex
@@ -34,10 +34,10 @@
 
 \mode<all>{\input{../../slides/networking/useful-progs}}
 
-%\mode<all>{\input{../../slides/networking/routing}}
+\mode<all>{\input{../../slides/networking/routing}}
 
-%\mode<all>{\input{../../slides/networking/iptables}}
+\mode<all>{\input{../../slides/networking/iptables}}
 
-%\mode<all>{\input{../../slides/networking/practice}}
+\mode<all>{\input{../../slides/networking/practice}}
 
 \end{document}
