--- a/slides/networking/iptables.tex
+++ b/slides/networking/iptables.tex
@@ -1,12 +1,18 @@
 \begin{frame}{Iptables}
 
-	\center\includegraphics[height=0.4\textheight]{../../slides/networking/06-iptables.png}
+	\center\includegraphics[height=0.6\textheight]{../../slides/networking/06-iptables.png}
+
+\end{frame}
+
+\begin{frame}{Iptables}
+
+	\center{\bf iptables -t <table> -L}
+	\center{\bf iptables -t <table> -F}
+	\bigskip
 
 	\begin{itemize}
 	\begin{columns}
 		\column{0.3\textwidth}
-			\item[ ] {\bf iptables -L -t <table>}
-				\bigskip
 
 			\item filter -- файерволл
 				\begin{itemize}
@@ -32,6 +38,27 @@
 					\item POSTROUTING
 				\end{itemize}
 		\end{columns}
+	\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}{Iptables: примеры}
+
+	\center{\bf iptables -t <table> <CRITERIA> <TARGET>}
+	\small
+	\begin{itemize}
+		\item filter:\\
+			{\tt iptables -A INPUT -s 192.168.0.1/24 -p UDP -j REJECT -{}-reject-with icmp-host-unreachable}\\
+			{\tt iptables -A INPUT -d 192.168.0.1/24 -p TCP -j DROP}
+		\item nat:\\
+			{\tt iptables -A POSTROUTING -t nat -s 192.168.1.0/24 -j MASQUERADE}\\
+			{\tt iptables -t nat -A PREROUTING -p tcp -d 192.168.251.1 
+			--dport 8080 -{}-sport 1024:65535 -j DNAT -{}-to 192.168.1.200:8080}
+		\item mangle:\\
+			{\tt iptables -A PREROUTING -t mangle -p tcp -{}-dport 22 -j MARK -{}-set-mark 100}\\
+			{\tt ip route add default dev eth0 table 1}\\
+			{\tt ip rule add fwmark 100 table 1}
 	\end{itemize}
 
 \end{frame}
