--- a/slides/networking/practice.tex
+++ b/slides/networking/practice.tex
@@ -1,41 +1,77 @@
 \begin{frame}{Практика: создание тестовой среды}
-	\begin{itemize}
-		\item Подготовка диска
+
+	\center\includegraphics[height=0.4\textheight]{../../slides/networking/net-practice.png}
+
+
+	\begin{block}{Задача}
+		Запустить 3 идентичные виртуальные машины.\\
+		Каждой машине назначить адрес из отдельного IP диапазона.\\
+		Организовать сетевую ''видимость'' между виртуальными машинами, а также хостом.		
+	\end{block}
+
+\end{frame}
+
+
+
+\begin{frame}{Практика: создание тестовой среды}
+	\begin{block}{Подготовка дисковой подсистемы}
 			\begin{itemize}
-				\item Создать пустой файл размером в 1GB и отобразить на устройство
+				\item Создать пустой файл размером в 1.5 GB и отобразить на устройство
 					/dev/loop ({\tt dd, losetup})
 				\item Создать группу томов на базе этого устройства ({\tt pvcreate, vgcreate})
-				\item Выделить 75\% объема под логический диск ({\tt lvcreate})
-				\item Скопировать содержимое виртуального диска в полученный логический том ({\tt dd})
-				\item Создать снимок логического тома на 20\% размера ({\tt lvcreate})
+				\item Выделить 1 GB под логический диск ({\tt lvcreate})
+				\item Скопировать образ виртуального диска в полученный логический том ({\tt dd})
+				\item Создать снимок логического тома на 100MB ({\tt lvcreate}) для каждой виртуальной машины.
 			\end{itemize}
-	\end{itemize}
+	\end{block}
 \end{frame}
 
 \begin{frame}{Практика: создание тестовой среды}
-	\begin{itemize}
-		\item Запуск виртуальных машин
+
+	\begin{block}{Запуск виртуальных машин}
+
+		\begin{itemize}
+			\item {\tt modprobe kvm-intel} 
+			\item {\tt modprobe tun}
+			\item Запустить виртуальные машины (вручную, либо с использованием скрипта {\tt start-kvm.sh})
+			\item Убедиться в наличии tap интерфейсов
+		\end{itemize}
+	\end{block}
+
+\end{frame}
+
+
+\begin{frame}{Практика: создание тестовой среды}
+
+	\begin{block}{Настройка сети на хосте}
 			\begin{itemize}
-				\item {\tt modprobe kvm-intel} 
-				\item {\tt modprobe tun} 
-				\item {\tt kvm -m 512 -boot c -net nic -net tap,ifname=tap0,script=no,downscript=no /dev/VG0/origin } 
-				\item {\tt kvm -m 512 -boot c -net nic -net tap,ifname=tap1,script=no,downscript=no /dev/VG0/snap } 
-			\end{itemize}
-			\pause
-		\item Настройка сети на хосте
-			\begin{itemize}
-				\item Создать мост {\tt brctl} и назначить ему адрес {\tt ifconfig/ip}
+				\item Создать мост {\tt brctl} и назначить ему адреса из соответствующих диапазонов {\tt ifconfig/ip}
 				\item Поднять виртуальные интерфейсы {\tt ifconfig/ip}
-				\item Добавить дополнительный интерфейс и виртуальные интерфейсы к мосту {\tt brctl}
+				\item Добавить виртуальные интерфейсы к мосту {\tt brctl}
 			\end{itemize}
-			\pause
-		\item Настройка сети на виртуалках
+	\end{block}
+\end{frame}
+
+
+\begin{frame}{Практика: создание тестовой среды}
+	\begin{block}{Настройка сети на виртуальных машинах}
 			\begin{itemize}
 				\item Назначить адрес устройству eth0 {\tt ifconfig/ip}
-				\item Проверить {\tt ping}
+				\item Добавить адрес маршрутизатора по умолчанию {\tt route/ip}
+				\item Проверить доступность виртуальных машин и хоста {\tt ping/nmap}
 			\end{itemize}
+	\end{block}
+\end{frame}
 
-	\end{itemize}
+\begin{frame}{Практика: создание тестовой среды}
+
+	\begin{block}{Настройка роутинга и NAT}
+			\begin{itemize}
+				\item Разрешить форвардинг на хосте
+				\item Настроить NAT на хосте ({\tt iptables},  правило {\tt MASQUERADE})
+				\item Проверить доступность хостов из ''внешней'' сети {\tt ping/nmap}
+			\end{itemize}
+	\end{block}
 \end{frame}
 
 
