Some initial slides for bash

--- a/epam/Presentation/07-bash_intro.tex
+++ b/epam/Presentation/07-bash_intro.tex
@@ -26,14 +26,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Что такое и с чем едят}
 
-\section{Переменные}
-
-\mode<all>{\input{../../slides/bash/vars}}
+\mode<all>{\input{../../slides/bash/description}}
 
 \section[Runtime]{Скрипты и запуск}
 
 \mode<all>{\input{../../slides/bash/runtime}}
+
+\section{Переменные}
+
+\mode<all>{\input{../../slides/bash/vars}}
 
 \section{Параметры}
 
