--- a/slides/networking/routing.tex
+++ b/slides/networking/routing.tex
@@ -6,7 +6,8 @@
 	\end{itemize}
 
 	\begin{block}{Разрешить маршрутизацию на хосте}
-		{\tt echo 1 > /proc/sys/net/ipv4/ip\_forward}
+		{\tt echo 1 > /proc/sys/net/ipv4/ip\_forward}\\
+		{\tt sysctl net.ipv4.ip\_forward=1}
 	\end{block}
 
 	Примеры:
