Added Epam-colored theme

--- a/epam/Presentation/common.tex
+++ b/epam/Presentation/common.tex
@@ -1,6 +1,6 @@
 \documentclass[ignorenonframetext, professionalfonts, hyperref={pdftex, unicode}]{beamer}
 
-\usetheme{Copenhagen}
+\usetheme{Epam}
 \usecolortheme{wolverine}
 
 %Packages to be included
@@ -10,7 +10,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-%%\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
+\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
 
 \usepackage{textcomp}
 
