--- a/epam/Presentation/02-command.tex
+++ b/epam/Presentation/02-command.tex
@@ -40,6 +40,7 @@
 \mode<all>{\input{../../slides/cmdline/commands1}}
 
 \mode<all>{\input{../../slides/cmdline/io-redirection}}
+\mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
 \mode<all>{\input{../../slides/cmdline/editors-intro}}
 
