--- a/epam/Presentation/beamerthemeEpam.sty
+++ b/epam/Presentation/beamerthemeEpam.sty
@@ -13,7 +13,6 @@
 \mode<presentation>
 
 \usefonttheme{default}
-%\usecolortheme{wolverine}
 \useinnertheme[shadow=true]{rounded}
 \useoutertheme{shadow}
 
@@ -38,6 +37,12 @@
 
 \setbeamercolor{epamlinestring}{fg=EpamBlue,bg=white}
 
+% system colors redefination
+\setbeamercolor{structure}{fg=EpamBlue}
+\setbeamercolor{frametitle}{bg=EpamBlue}
+\setbeamercolor{frametitle right}{bg=EpamBlueLight}
+
+
 
 % some lengths (the height of the lines)
 \newlength{\beamer@decolines@lineup}
@@ -48,6 +53,9 @@
 
 \newlength{\beamer@decolines@linebottom}
 \setlength{\beamer@decolines@linebottom}{.015\paperheight}
+
+\newlength{\beamer@decolines@headline}
+\setlength{\beamer@decolines@headline}{.015\paperheight}
 
 % String used between the current page and the total page count.
 \def\beamer@decolines@pageofpages{/}
@@ -96,7 +104,23 @@
 
 % colors for headline
 % headline
-\setbeamertemplate{headline}{}
+\setbeamertemplate{headline}{%
+\leavevmode%
+  \hbox{%
+    \begin{beamercolorbox}[wd=\paperwidth,ht=\beamer@decolines@headline,dp=1.125ex]{epamline2}%
+    \insertsectionnavigationhorizontal{\paperwidth}{}{\hskip0pt plus1filll}
+    \end{beamercolorbox}%
+  }
+}
+
+\setbeamercolor{block title}{use=structure,fg=white,bg=structure.fg}
+\setbeamercolor{block title alerted}{use=alerted text,fg=white,bg=alerted text.fg!75!black}
+\setbeamercolor{block title example}{use=example text,fg=white,bg=example text.fg!75!black}
+
+\setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!5!white}
+\setbeamercolor{block body alerted}{parent=normal text,use=block title alerted,bg=block title alerted.bg!10!bg}
+\setbeamercolor{block body example}{parent=normal text,use=block title example,bg=block title example.bg!10!bg}
+
 
 \makeatother
 
