Reworked some slides

--- a/slides/bash/params.tex
+++ b/slides/bash/params.tex
@@ -3,10 +3,10 @@
 	\frametitle{Позиционные параметры}
 
 	\begin{itemize}
-		\item \$0-9
-		\item \$\#
-		\item \$* -- представляется,  как одна строка
-		\item \$@ -- каждый параметр,  как отдельная строка
+		\item \$0-9 -- значение соответствующего параметра
+		\item \$\# -- еоличество переданных параметров
+		\item \$* -- представляется, как одна строка
+		\item \$@ -- каждый параметр, как отдельная строка
 	\end{itemize}
 
 \end{frame}
