--- a/slides/bash/tests.tex
+++ b/slides/bash/tests.tex
@@ -1,22 +1,34 @@
 %%
+\begin{frame}[fragile]
+    \frametitle{Общий синтаксис}
+
+
+	\begin{block}{Конструкции для сравнения}
+		\begin{itemize}
+			\item {\tt \&\&} -- выполнится в случае успеха
+			\item {\tt ||} -- выполнится в случае неудачи
+		\end{itemize}
+	\end{block}
+
+	\begin{verbatim}
+команда1 && команда2 || команда3
+условие1 && команда2 || команда3
+команда1 && команда2 && команда3 && ... && командаN
+	\end{verbatim}
+
+\end{frame}
 
 \begin{frame}
-\frametitle{Общий синтаксис}
+    \frametitle{Общий синтаксис}
 
-	Условие:
-	\begin{itemize}
-		\item Exit status любой программы
-		\item test или $[$ 
-                \item $[[$
-		\item Двойные скобки {\bf (( ... ))} и конструкция {\bf let}
-	\end{itemize}
-
-
-	Конструкция для сравнения:
-	\begin{itemize}
-		\item \&\& и ||
-		\item if/then/else
-	\end{itemize}
+	\begin{block}{Условие}
+		\begin{itemize}
+			\item Exit status любой программы
+			\item test или $[$ 
+			\item $[[$
+			\item Двойные скобки {\bf (( ... ))} и конструкция {\bf let}
+		\end{itemize}
+	\end{block}
 
 \end{frame}
 
@@ -27,7 +39,7 @@
 	\begin{itemize}
 	    \item ! -- отрицание
 	    \item -z СТРОКА
-	    \item СТРОКА1 = СТРОКА2
+	    \item СТРОКА1 = СТРОКА2 или  СТРОКА1 == СТРОКА2 
 	    \item СТРОКА1 != СТРОКА2
 	    \item ЦЕЛОЕ1 -eq ЦЕЛОЕ2
 	    \item ЦЕЛОЕ1 -ge ЦЕЛОЕ2
@@ -97,16 +109,33 @@ test -z "$DISPLAY" && echo "text mode" || echo "graphical mode"
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{Двойные квадратные скобки}
-\begin{itemize}
-\item Ведет себя не как команда, а как особая конструкция
-\item Доступны дополнительные сравнения (на соответствие регулярному выражению)
-\item Нет необходимости закавычивать переменные
-\item Внутри можно использовать логические связки
-\item 
-\end{itemize}
-\end{frame}
-%\begin{frame}[fragile]{}
+	\frametitle{Двойные квадратные скобки}
 
-%\end{frame}
+	\begin{itemize}
+		\item Ведет себя не как команда, а как особая конструкция
+		\item Доступны дополнительные сравнения (на соответствие регулярному выражению)
+		\item Нет необходимости закавычивать переменные
+		\item Внутри можно использовать логические связки \({\tt \&\&, \|, \langle, \rangle}\)
+	\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Двойные круглые скобки}
+
+	Можно использовать арифметические операции внутри конструкции\\
+	\center{\tt (( ... ))}
+
+	Возвращаемое значение 0 либо 1.
+
+	\begin{block}{Пример}
+		\begin{lstlisting}[language=bash]
+#!/bin/bash
+
+a=$1
+b=$2
+(( $a > $b )) && echo $a больше $b || echo $a не больше $b
+		\end{lstlisting}
+	\end{block}
+\end{frame}
+
 
