Moved branching part from 03 to 04

--- a/epam/BashScripting/04-bash_syntax.tex
+++ b/epam/BashScripting/04-bash_syntax.tex
@@ -26,6 +26,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Условные операторы}
+
+\mode<all>{\input{../../slides/bash/branching}}
+
+
 \section{Функции}
 
 \mode<all>{\input{../../slides/bash/functions}}
