Minor fixes in branching and functions.
Some class practice renamed to homework.

--- a/slides/bash/branching.tex
+++ b/slides/bash/branching.tex
@@ -3,28 +3,29 @@
 \frametitle{Синтаксис {\bf if}}
 
 	\begin{columns}
-		\column{0.4\textwidth}
+		\column{0.3\textwidth}
 	
 	\begin{lstlisting}[language=bash]
-if [ условие1 ]
+if условие1
 then
    . . .
-elif [ условие2 ]
+elif условие2
 then
    . . .
 else
    . . .
 fi
 \end{lstlisting}
-		\column{0.6\textwidth}
+		\column{0.7\textwidth}
 	\pause
 	{\bf Практическое задание:} \\
 	\begin{itemize}
 
-		\item с помощью конструкции {\bf if} проверить существует ли файловый объект передаваемый в качестве параметра скрипту
+		\item с помощью конструкции {\bf if} проверить существует ли файловый объект передаваемый в качестве параметра скрипту ({\tt man test})
 		\item если нет, то создать директорию с таким именем
-		\item если cуществует и файл является shell-скриптом, то запустить его
-		\item если существует и является директорией, то вывести на экран первых 5 файлов в этой директории
+		\item если cуществует и файл является shell-скриптом ({\tt man file}), то запустить его
+		\item если существует и является директорией, то вывести на экран Top5 по размеру файлов из этой директории, 
+		    отсортированных в порядке убывания ({\tt man ls, man head})
 	\end{itemize}
 	\end{columns}
 \end{frame}
@@ -140,7 +141,7 @@ done
 \end{frame}
 
 \begin{frame}
-\frametitle{Практическое задание}
+\frametitle{Домашнее задание}
 Переписать скрипт из предыдущего задания с использованием {\tt getopt} либо {\tt getopts}.
 \end{frame}
 
