Bash Lectures swap 05 <-> 06

--- a/epam/BashScripting/05-bash_advanced.tex
+++ b/epam/BashScripting/05-bash_advanced.tex
@@ -26,14 +26,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Массивы}
 
-\mode<all>{\input{../../slides/bash/arrays}}
+\section{Манипуляции со строками}
+
+\mode<all>{\input{../../slides/bash/strings}}
+
+\section{Практическая задача}
+
+\mode<all>{\input{../../slides/bash/example}}
 
 \section{Подстановка параметров}
 
 \mode<all>{\input{../../slides/bash/parameter_substitution}}
-
-
 
 \end{document}
