Finished lecture 6 for bash

--- a/epam/BashScripting/06-bash_advanced.tex
+++ b/epam/BashScripting/06-bash_advanced.tex
@@ -23,19 +23,30 @@
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-trap
 
-\section{Манипуляции со строками}
+\section{Массивы}
 
-\mode<all>{\input{../../slides/bash/strings}}
+\mode<all>{\input{../../slides/bash/arrays}}
 
-\section{Практическая задача}
+\section{Атрибуты переменных}
+\mode<all>{\input{../../slides/bash/declare}}
 
-\mode<all>{\input{../../slides/bash/example}}
+\section{Обработка сигналов}
+\mode<all>{\input{../../slides/bash/trap}}
 
+\section{Debug}
+\mode<all>{\input{../../slides/bash/debug}}
+
+
+\begin{frame}{}
+\Huge
+\begin{center}
+	{\tt man bash}
+\end{center}
+\end{frame}
 
 \end{document}
