Fixed couple of annoying bugs

--- a/slides/bash/arithmetic.tex
+++ b/slides/bash/arithmetic.tex
@@ -7,10 +7,12 @@
     \begin{block}{Примеры}
      {\tt (( a=10 )); echo \$(( a++ )); echo \$a; } 
     \end{block}
+    \pause
    \item  {\tt let}
     \begin{block}{Примеры}
      {\tt let a=10; echo \$a; let a+=-2; echo \$a; echo \$(( $--$a)); echo \$a} 
     \end{block}
+    \pause
    \item  {\tt expr } внешняя команда 
     \begin{block}{Пример}
        { \tt x=\`{}expr \$x + 1\`{} }
