Added 'wait' command

--- a/slides/bash/runtime.tex
+++ b/slides/bash/runtime.tex
@@ -131,6 +131,7 @@ echo -e "test \v test \v test"
 		\item {\tt bg} -- поместить задачу в фоновое исполнение
 		\item {\tt fg} -- ''переключиться'' на задачу
 		\item {\tt jobs} -- список активных задач
+		\item {\tt wait [pid|id]} -- ждать завершения всех, либо конкретных задач
 	\end{itemize}
 	\pause
 	\begin{block}{Задание}
