Fix HEX numbers to use 2 digits instead of 3

--- a/slides/bash/runtime.tex
+++ b/slides/bash/runtime.tex
@@ -72,7 +72,7 @@ echo -e "test \v test \v test"
 			\item \textbackslash{b} -- перемещение на 1 символ назад
 			\item \textbackslash{a} -- звуковой сигнал
 			\item \textbackslash{0xxx} -- 8-миричное число
-			\item \textbackslash{xXXX} -- 16-ричное число
+			\item \textbackslash{xXX} -- 16-ричное число
 		\end{itemize}
 	\end{columns}
 
