Some attempt to rework github slide

--- a/conferences/altlinux-2014/linux_education_perejaslavl.tex
+++ b/conferences/altlinux-2014/linux_education_perejaslavl.tex
@@ -24,5 +24,8 @@
 %\section{SaM Solutions}
 %\mode<all>{\input{../lvee2013-winter/sam-solutions}}
 \section{All}
-\mode<all>{\input{../lvee2013-winter/collaborative-work}}
+\mode<all>{\input{collaborative-work}}
+\begin{frame}{Текущий статус}
+  \includegraphics[height=5cm]{network2.png}
+\end{frame}
 \end{document}
