--- a/conferences/altlinux-2014/epam.tex
+++ b/conferences/altlinux-2014/epam.tex
@@ -54,22 +54,6 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Первый набор}
-
-	\center\includegraphics[height=0.5\textheight]{epam-evm_lab512}
-
-	\begin{block}{Немного статистики}
-		\begin{itemize}
-			\item Подано заявок: {\bf 39} человек
-			\item После первоначального отбора: {\bf 16} человек
-				\begin{itemize}
-					\item из них {\bf 4} -- сотрудники Epam
-				\end{itemize}
-		\end{itemize}
-	\end{block}
-\end{frame}
-
-\begin{frame}
 	\frametitle{Формат проведения занятий}
 
 	\begin{block}{Принципы}
@@ -81,10 +65,48 @@
 		\end{itemize}
 	\end{block}
 
-	\pause
-
-
 \end{frame}
 
+\begin{frame}
+	\frametitle{Первый набор}
 
+	\center\includegraphics[height=0.5\textheight]{epam-evm_lab512}
+
+	\begin{block}{Немного статистики}
+		\begin{itemize}
+			\item Подано заявок: {\bf 39} человек
+			\item После первоначального отбора: {\bf 16} человек
+				\begin{itemize}
+					\item из них {\bf 4} -- сотрудники Epam
+				\end{itemize}
+            \item Получили сертификаты человек
+            \item Планировали 48 часов
+            \pause
+            \item Получилось 66 часов
+		\end{itemize}
+	\end{block}
+
+    
+\end{frame}
+
+\begin{frame}
+  \frametitle{Работа над ошибками}
+  \includegraphics[width=\textwidth]{anketa.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Второй набор: изменения в программе}
+\begin{itemize}
+  \item Пересмотрены некоторые разделы (networking, лицензии)
+  \item Добавлены новые разделы
+    \begin{itemize}
+      \item Python
+      \item C
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Второй набор: статистика}
+\end{frame}
 
