--- a/conferences/altlinux-2014/linux_education_perejaslavl.tex
+++ b/conferences/altlinux-2014/linux_education_perejaslavl.tex
@@ -23,9 +23,6 @@
 \mode<all>{\input{epam}}
 %\section{SaM Solutions}
 %\mode<all>{\input{../lvee2013-winter/sam-solutions}}
-\section{All}
+\section{Сотрудничество}
 \mode<all>{\input{collaborative-work}}
-\begin{frame}{Текущий статус}
-  \includegraphics[height=5cm]{network2.png}
-\end{frame}
 \end{document}
