Added photo with certificates

--- a/conferences/altlinux-2014/epam.tex
+++ b/conferences/altlinux-2014/epam.tex
@@ -68,10 +68,12 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Первый набор}
+  \frametitle{Первый набор}
+  \begin{columns}
+    \column{0.5\textwidth}
+	\includegraphics[width=\textwidth]{epam-evm_lab512}
 
-	\center\includegraphics[height=0.5\textheight]{epam-evm_lab512}
-
+    \column{0.5\textwidth}
 	\begin{block}{Немного статистики}
 		\begin{itemize}
 			\item Подано заявок: {\bf 39} человек
@@ -85,8 +87,14 @@
             \item Получилось 66 часов
 		\end{itemize}
 	\end{block}
+  \end{columns}
 
     
+\end{frame}
+
+\begin{frame}
+  \frametitle{Успех!}
+  \includegraphics[width=\textwidth]{linux_courses_certificates1.jpg}
 \end{frame}
 
 \begin{frame}
@@ -95,18 +103,29 @@
 \end{frame}
 
 \begin{frame}
-\frametitle{Второй набор: изменения в программе}
-\begin{itemize}
-  \item Пересмотрены некоторые разделы (networking, лицензии)
-  \item Добавлены новые разделы
+\frametitle{Второй набор}
+  \begin{itemize}
+    \item Пересмотрены некоторые разделы (networking, лицензии)
+    \item Два новых лектора
+    \item Добавлены новые разделы
+      \begin{itemize}
+        \item Python
+        \item C
+      \end{itemize}
+  \end{itemize}
+ \begin{block}{Статистика}
     \begin{itemize}
-      \item Python
-      \item C
+      \item Подано заявок: ?
+      \item Предварительно отобрано: 15 человек
+      \item На занятиях: 11 человек + сотрудники EPAM (6-8 посещение свободное)
+      \item Один человек нашел работу в процессе
     \end{itemize}
-\end{itemize}
+  \end{block}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Второй набор: статистика}
+  \frametitle{Оргвыводы по второму набору}
+  \begin{itemize}
+    \item
+  \end{itemize}
 \end{frame}
-
