Fixed slides for conference altlinux-2014
Ready slides for Девятая конференция "Свободное программное обеспечение
в высшей школе",  25–26 января 2014

--- a/conferences/altlinux-2014/collaborative-work.tex
+++ b/conferences/altlinux-2014/collaborative-work.tex
@@ -15,35 +15,83 @@
 \end{frame}
 
 \begin{frame}{Конкуренция между компаниями}
-      
-  \center\Large\alert{Конкуренции - нет}\footnote{См кол-во проектов и падение плотности специалистов}
+
+  \center\Large\alert{Конкуренции -- нет}
 
   \center\includegraphics[height=0.7\textheight]{penguin}
 
 \end{frame}
 
 
-\begin{frame}[fragile]{Ранняя публикация результатов}
+\begin{frame}[fragile]{Публикация результатов}
 
   \begin{center}
-    \alert{Release early, release often} 
+	  \begin{block}{Ранняя публикация результатов}
+		  {\Large Release early, release often}
+	  \end{block}
+
+
+	  \begin{block}{Go github!}
+		\href{https://github.com/epam-llpd/linux\_courses}{https://github.com/epam-llpd/linux\_courses}
+	  \end{block}
+
+
+	  \begin{block}{Исходники}
+		{\Large Use \LaTeX, Luke!}
+	  \end{block}
+
   \end{center}
 
-  \begin{center}
-    \only<1>{\Large февраль 2013}\only<2->{\Large январь 2014}
-  \end{center}
-\begin{lstlisting}
-  # find linux_courses/ -name "*.tex"|wc -l
-\end{lstlisting}
-\onslide<1>{48}\onslide<2->{139}
-
-\only<1>{ \includegraphics[width=0.5\textwidth]{members} }\only<2->{\includegraphics[width=0.4\textwidth]{network2.png}}
-  \onslide<3->{
-\begin{center}
-    \alert{Go github!}
-\end{center}
-}
 \end{frame}
+
+
+\begin{frame}[fragile]{Эволюция}
+
+  \begin{columns}
+
+	  \column{0.35\textwidth}
+
+	  \begin{center}
+		{\Large февраль 2013}
+	  \end{center}
+
+	  \begin{itemize}
+		\item 6 авторов
+		\item 177 коммитов
+		\item 1.5 курса
+	  \end{itemize}
+
+	  \begin{itemize}
+		\item MLUG
+		\item Epam (БГУИР)
+		\item SaM-Solutions
+		\item[]
+	  \end{itemize}
+
+    \column{0.35\textwidth}
+
+	  \begin{center}
+		{\Large январь 2014}
+	  \end{center}
+
+	  \begin{itemize}
+		\item 14 авторов
+		\item 312 коммитов
+		\item 3.5 курса
+	  \end{itemize}
+
+	  \begin{itemize}
+		\item MLUG
+		\item Epam (БГУИР)
+		\item SaM-Solutions
+		\item Promwad (БГУ)
+	  \end{itemize}
+
+  \end{columns}
+
+\end{frame}
+
+
 
 \begin{frame}{Call for partnership}
   
