--- a/conferences/altlinux-2014/linux_education_perejaslavl.tex
+++ b/conferences/altlinux-2014/linux_education_perejaslavl.tex
@@ -17,12 +17,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Проблема}
-\mode<all>{\input{../lvee2013-winter/problem-description}}
-\section{EPAM}
+\section[Проблема]{Проблема Linux-образования}
+\mode<all>{\input{problem-description}}
+\section[Epam]{Курсы по Linux от Epam}
 \mode<all>{\input{epam}}
-%\section{SaM Solutions}
-%\mode<all>{\input{../lvee2013-winter/sam-solutions}}
 \section{Сотрудничество}
 \mode<all>{\input{collaborative-work}}
+
+\begin{frame}[fragile]{}
+
+  \Large \alert{Вопросы?}  \footnote{Авторы благодарят ex-сотрудника компании SaM-Solutions \\
+  Влада (mend0za) Шахова за использованные при подготовке материалы}
+
+  \bigskip
+
+  \href{http://mlug.linux.by}{http://mlug.linux.by}
+
+  \href{https://github.com/epam-llpd/linux\_courses}{https://github.com/epam-llpd/linux\_courses}
+
+  \hrulefill
+
+  \href{mailto:denis\_pynkin@epam.com}{denis\_pynkin@epam.com}
+
+  \href{mailto:yury\_adamov@epam.com}{yury\_adamov@epam.com}
+
+
+\end{frame}
+
 \end{document}
