--- a/conferences/altlinux-2014/epam.tex
+++ b/conferences/altlinux-2014/epam.tex
@@ -39,10 +39,11 @@
 			\item Уметь программировать, под любую платформу.
 		\end{itemize}
 	\end{block}
+
 \end{frame}
 
 \begin{frame}
-	\frametitle{Программа}
+	\frametitle{Программа курсов}
 
 	\begin{block}{Командная строка -- важнейший инструмент понимания процесса разработки}
 		\begin{itemize}
@@ -65,7 +66,15 @@
 		\end{itemize}
 	\end{block}
 
+	\begin{block}{Место проведения}
+		\begin{itemize}
+			\item Совместная лаборатория Epam-БГУИР 
+		\end{itemize}
+	\end{block}
+
 \end{frame}
+
+\section[2012]{Курс 2012-2013}
 
 \begin{frame}
   \frametitle{Первый набор}
@@ -76,20 +85,21 @@
     \column{0.5\textwidth}
 	\begin{block}{Немного статистики}
 		\begin{itemize}
-			\item Подано заявок: {\bf 39} человек
+			\item Подано заявок -- {\bf 39} человек
 			\item После первоначального отбора: {\bf 16} человек
 				\begin{itemize}
 					\item из них {\bf 4} -- сотрудники Epam
 				\end{itemize}
-            \item Получили сертификаты человек
+			\item Получили сертификаты -- {\bf 13} человек
+			\item Устроились на Epam, как Linux-разработчики -- {\bf 4} человека
             \item Планировали 48 часов
             \pause
-            \item Получилось 66 часов
+			\begin{itemize}
+    				\item[--] Получилось 66 часов
+			\end{itemize}
 		\end{itemize}
 	\end{block}
   \end{columns}
-
-    
 \end{frame}
 
 \begin{frame}
@@ -98,34 +108,75 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Работа над ошибками}
+  \frametitle{Анкеты и анализ}
   \includegraphics[width=\textwidth]{anketa.png}
+\end{frame}
+
+\section[2013]{Курс 2013-2014}
+\begin{frame}
+\frametitle{Второй набор}
+
+  \begin{columns}
+
+  \column{0.4\textwidth}
+
+	\includegraphics[width=\textwidth]{linux_courses_epam}
+
+  \column{0.6\textwidth}
+	  \begin{block}{Статистика}
+		\begin{itemize}
+		  \item Подано заявок: 80
+		  \item Прошли телефонное интервью: 23
+		  \item Дошли до курсов: 11 человек \\ + 6-8 свободных слушателей (сотрудники EPAM и не только)
+		\end{itemize}
+	  \end{block}
+  \end{columns}
 \end{frame}
 
 \begin{frame}
 \frametitle{Второй набор}
-  \begin{itemize}
-    \item Пересмотрены некоторые разделы (networking, лицензии)
-    \item Два новых лектора
-    \item Добавлены новые разделы
-      \begin{itemize}
-        \item Python
-        \item C
-      \end{itemize}
-  \end{itemize}
- \begin{block}{Статистика}
-    \begin{itemize}
-      \item Подано заявок: ?
-      \item Предварительно отобрано: 15 человек
-      \item На занятиях: 11 человек + сотрудники EPAM (6-8 посещение свободное)
-      \item Один человек нашел работу в процессе
-    \end{itemize}
+  \begin{block}{Что поменялось?}
+	  \begin{itemize}
+		\item Пересмотрены некоторые разделы (networking, лицензии)
+		\item Добавлены новые модули
+		  \begin{itemize}
+	        \item C\footnote{В процессе}
+			\item Python
+		  \end{itemize}
+		\item Еще два инструктора
+	  \end{itemize}
   \end{block}
 \end{frame}
 
+
 \begin{frame}
-  \frametitle{Оргвыводы по второму набору}
-  \begin{itemize}
-    \item
-  \end{itemize}
+  \frametitle{Неожиданные проблемы}
+
+  \begin{block}{Конфликт интересов}
+
+
+  \center{\includegraphics[width=0.3\textwidth]{Lebed_chuka_rak03.jpg}}
+
+	\begin{columns}
+		\column{0.45\textwidth}
+		\begin{itemize}
+			\item Введение в GNU/Linux
+			\item Bash
+			\item Cредства разработки, отладки и оптимизации
+		\end{itemize}
+
+		\column{0.1\textwidth}
+		
+		\center{\Large VS}
+
+		\column{0.2\textwidth}
+		\begin{itemize}
+		  \item C
+		  \item Python
+		\end{itemize}
+		\column{0.2\textwidth}
+	\end{columns}
+
+  \end{block}
+
 \end{frame}
