--- a/epam/Presentation/common.tex
+++ b/epam/Presentation/common.tex
@@ -1,7 +1,7 @@
 \documentclass[ignorenonframetext, professionalfonts, hyperref={pdftex, unicode}]{beamer}
 
 \usetheme{Epam}
-\usecolortheme{wolverine}
+%\usecolortheme{wolverine}
 
 %Packages to be included
 %\usepackage{graphicx}
